web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-function-declaration/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,26)
1|function *g() { function yield() {} }
 |                        ^
